# polyconf-parser

./: .gitignore  AGENTS.md  README.md  build.gradle  gradlew.bat  settings.gradle
src/main/java/com/polyconf/parser/: PolyconfParser.java
src/test/java/com/polyconf/parser/: DotenvResourceTest.java  EdgeCaseResourceTest.java  HoconResourceTest.java  IniResourceTest.java  Json5ResourceTest.java  JsonResourceTest.java  KdlResourceTest.java  MixedFormatTest.java  MixedResourceTest.java  ResourceTest.java  (+10 more)
src/test/resources/edge-cases/: adjacent-mixed-no-blankline.txt  ambiguous-jsonlike.txt  ambiguous-keyvalue.txt  close-score-tie.txt  deeply-nested.txt  duplicate-keys.txt  format-scoring-gaps.txt  hint-wrong-format.txt  hocon-unique-syntax.txt  json-unicode-escapes.txt  json-with-comments.txt  leading-zeros.txt  mixed-format-dotenv-section-toml.txt  mixed-format-dotenv-toml.txt  mixed-format-dotenv-xml.txt  mixed-format-hinted.txt  mixed-format-json-dotenv.txt  mixed-format-multiline-safe.txt  mixed-format-properties-xml.txt  multiline-strings.txt  numeric-edge-cases.txt  properties-type-flat.txt  same-format-blanklines.txt  toml-table-array-vs-ini.txt  unicode-i18n.txt  weird-content.txt  weird-keys.txt  xml-entities.txt  xml-namespace.txt  yaml-multi-doc.txt
src/test/resources/mixed/: ambiguous-toml-ini.txt  ambiguous-toml-properties.txt  consecutive-same-format.txt  hinted-all-formats.txt  hinted-many.txt  hinted-mixed.txt  real-world-microservice.txt  unhinted-many.txt  unhinted-mixed.txt
src/test/resources/samples/dotenv/: .env  .env.docker  .env.production  .env.test
src/test/resources/samples/hocon/: akka.hocon  app.hocon  config.hocon
src/test/resources/samples/ini/: config.ini  database.ini  game.ini  global-keys.ini  php.ini
src/test/resources/samples/json/: config.json  manifest.json  package.json  tsconfig.json
src/test/resources/samples/json5/: config.json5  data.json5  settings.json5
src/test/resources/samples/kdl/: app.kdl  complex.kdl  config.kdl
src/test/resources/samples/properties/: app.properties  database.properties  escapes.properties  gradle.properties  i18n.properties  logging.properties
src/test/resources/samples/toml/: cargo.toml  complex.toml  dotted.toml  inline.toml  pyproject.toml  server.toml  simple.toml
src/test/resources/samples/xml/: config.xml  data.xml  logback.xml  pom.xml  settings.xml  web.xml
src/test/resources/samples/yaml/: anchors.yaml  complex.yaml  docker-compose.yaml  github-actions.yaml  kubernetes-deployment.yaml  multiline.yaml  server.yaml  simple.yaml  spring-boot.yaml
(+95 files in other folders)
