# Python pyproject.toml - real-world project configuration

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "polyconf-parser"
version = "0.1.0"
description = "Multi-format configuration parser"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "PolyConf Team", email = "team@polyconf.dev" }
]
keywords = ["config", "parser", "toml", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "json5>=0.9",
    "python-dotenv>=1.0",
    "xmltodict>=0.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7"
]
docs = [
    "sphinx>=7.3",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0"
]

[project.urls]
Homepage = "https://polyconf.dev"
Documentation = "https://docs.polyconf.dev"
Repository = "https://github.com/polyconf/polyconf-parser"
Issues = "https://github.com/polyconf/polyconf-parser/issues"

[project.scripts]
polyconf = "polyconf.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["build", "dist", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=polyconf",
    "--cov-report=term-missing",
    "--cov-report=xml"
]

[tool.coverage.run]
source = ["polyconf"]
omit = ["polyconf/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]
